# ClipForge2

./: API_REFERENCE.md  BUILD_AND_RUN.md  BUILD_FIX_GUIDE.md  CLIPFORGE_COMPLETE.md  COMPLETE_IMPLEMENTATION.md  COMPOSE_QUICK_START.md  COMPOSE_UI_COMPLETE_SUMMARY.md  COMPOSE_UI_INDEX.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  FILES_CREATED_SUMMARY.md  GRADLE_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PHASE1_ANALYSIS.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_FINAL_SUMMARY.md  PHASE4_PROGRESS.md  PHASE5_COMPLETE.md  PHASE5_GPU_IMPLEMENTATION.md  PHASE5_PREPARATION.md  PHASE6_COMPLETION_SUMMARY.md  PHASE6_EXECUTION_SUMMARY.txt  PHASE6_EXPORT_FINALIZATION.md  PROFESSIONAL_FEATURES.md  PROJECT_COMPLETION_STATUS.md  PROJECT_OVERVIEW.md  PROJECT_STATUS_FINAL.md  QUICK_REFERENCE.md  QUICK_START_AFTER_FIX.md  README.md  TESTING_GUIDE.md  UI_ALIGNMENT_ANALYSIS.md  UI_COMPOSE_IMPLEMENTATION.md  UI_REFERENCE_MAPPING.md  UI_STRUCTURE_DIAGRAM.md  (+2 more)
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/ucworks/clipforge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/animation/: keyframe_interpolator.cpp  keyframe_interpolator.h
app/src/main/cpp/audio/: audio_analyzer.cpp  audio_analyzer.h  audio_effects.h
app/src/main/cpp/core/: video_engine.cpp  video_engine.h
app/src/main/cpp/effects/: audio_processor.cpp  audio_processor.h  effects_processor.cpp  effects_processor.h  filter_library.cpp  filter_library.h
app/src/main/cpp/encoding/: export_manager.cpp  export_manager.h  export_presets.h  video_encoder.cpp  video_encoder.h
app/src/main/cpp/gpu/: gpu_effect.cpp  gpu_effect.h  gpu_renderer.cpp  gpu_renderer.h  opengl_context.cpp  opengl_context.h  shader_program.cpp  shader_program.h  shader_sources.h
app/src/main/cpp/gpu/effects/: blur_effect.cpp  blur_effect.h  color_grade_effect.cpp  color_grade_effect.h  distortion_effect.cpp  distortion_effect.h
app/src/main/cpp/graphics/: text_renderer.h
app/src/main/cpp/jni_bridge/: export_native_lib.cpp  gpu_bridge.cpp  gpu_bridge.h  jni_bridge.cpp  jni_bridge.h  native-lib.cpp
app/src/main/cpp/media/: media_extractor.cpp  media_extractor.h  thumbnail_generator.cpp  thumbnail_generator.h
app/src/main/cpp/models/: advanced_timeline.h  audio_track.cpp  audio_track.h  effect.cpp  effect.h  timeline.cpp  timeline.h  video_clip.cpp  video_clip.h
app/src/main/cpp/rendering/: export_engine.cpp  export_engine.h  transitions.h  video_renderer.cpp  video_renderer.h
app/src/main/cpp/storage/: project_storage.h
app/src/main/cpp/time/: time_effects.h
app/src/main/cpp/utils/: file_utils.cpp  file_utils.h  logger.cpp  logger.h
app/src/main/java/com/ucworks/clipforge/: AIAssistantActivity.kt  AudioMixerActivity.kt  ComposeActivity.kt  EditorActivity.kt  EffectsActivity.kt  ExportActivity.kt  ImportActivity.kt  MainActivity.kt  NativeLib.java  SettingsActivity.kt
app/src/main/java/com/ucworks/clipforge/adapters/: AudioTrackAdapter.kt  EffectsGridAdapter.kt  MediaGridAdapter.kt  RecentProjectsAdapter.kt
app/src/main/java/com/ucworks/clipforge/engine/: NativeVideoEngine.kt  VideoEngine.kt
app/src/main/java/com/ucworks/clipforge/fragments/: AIAssistantFragment.kt  AudioMixerFragment.kt  EditorFragment.kt  EffectsFragment.kt  ExportFragment.kt  ImportFragment.kt  MainFragment.kt  SettingsFragment.kt
app/src/main/java/com/ucworks/clipforge/models/: AudioTrack.kt  Effect.kt  MediaItem.kt  Project.kt  VideoClip.kt
app/src/main/java/com/ucworks/clipforge/repository/: ProjectRepository.kt
app/src/main/java/com/ucworks/clipforge/ui/: ColorGradingActivity.kt  OnboardingActivity.kt  SettingsActivity.kt  SplashActivity.kt
app/src/main/java/com/ucworks/clipforge/utils/: ErrorHandler.kt  LifecycleExtensions.kt  PreferencesManager.kt  StringExtensions.kt  ViewExtensions.kt
app/src/main/java/com/ucworks/clipforge/viewmodels/: EditorViewModel.kt  (+1 more)
app/src/main/res/drawable/: card_background.xml  ic_add.xml  ic_effect_curves.xml  ic_help.xml  ic_pause.xml  ic_play.xml  onboarding_tab_selector.xml
app/src/main/res/layout/: activity_ai_assistant.xml  activity_audio_mixer.xml  activity_color_grading.xml  activity_editor.xml  activity_editor_aligned.xml  activity_effects.xml  activity_export.xml  activity_import.xml  activity_main.xml  activity_onboarding.xml  activity_settings.xml  activity_splash.xml  dialog_new_project.xml  fragment_ai_assistant.xml  fragment_audio_mixer.xml  fragment_editor.xml  fragment_effects.xml  fragment_export.xml  fragment_export_progress.xml  fragment_gpu_effects.xml  fragment_import.xml  fragment_main.xml  fragment_settings.xml  item_audio_track.xml  item_effect.xml  item_media.xml  item_onboarding_page.xml  item_project.xml  item_timeline_clip.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/ucworks/clipforge/: ExampleUnitTest.kt
design/: ClipForge2-Additional-Files.md  ClipForge2-Bug-Fixes-Checklist.md  ClipForge2-Implementation-Summary.md  ClipForge2-Production-Implementation-Guide.md  FIX_GUIDE.md
design/UC/: 01-HOME-SCREEN-ENHANCED.md  02-IMPORT-SCREEN-ENHANCED.md  03-TEMPLATES-SCREEN-ENHANCED.md  04-EDITOR-SCREEN-ENHANCED.md  05-EXPORT-SCREEN-ENHANCED.md  06-SETTINGS-SCREEN-ENHANCED.md  07-EDITOR-TABS-ENHANCED.md  UPDATED-INDEX.md
design/features/: ai_assistant.md  audio_processing.md  effects_filters.md  export_system.md  media_management.md  text_overlay_system.md  ui_ux.md  video_editing_engine.md
design/screens/: ai_assistant.md  audio_mixing.md  editing_timeline.md  effects_filters.md  export.md  home_dashboard.md  import_media_selection.md  text_overlay.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+28 files in other folders)
